--- a/templates/registration.html
+++ b/templates/registration.html
@@ -11,29 +11,29 @@
         <form class="registrationForm" method="POST" action="/includes/auth-handler.php">
             <div class="registerTop">
                 <input-group>
-                    <label for="username">First Name</label>
+                    <label for="FirstName">First Name</label>
                     <input type="text" name="FirstName" required> 
                 </input-group>
                 <input-group>
-                    <label for="username">Last Name</label>
+                    <label for="LastName">Last Name</label>
                     <input type="text" name="LastName" required>
                 </input-group>
             </div>
             <input-group>
-                <label for="email">email</label>
+                <label for="Email">email</label>
                 <input type="email" name="Email" required>    
             </input-group>
             <input-group>
-                <label for="username">Username</label>
+                <label for="Username">Username</label>
                 <input type="text" name="Username" required>    
             </input-group>
             <input-group>
-                <label for="password">Password</label>
+                <label for="Password">Password</label>
                 <input type="password" name="Password" required>    
             </input-group>
             
             <input-group>
-                <label for="birthday">Birthday</label>
+                <label for="Birthday">Birthday</label>
                 <input type="text" name="Birthday" required>    
             </input-group>
             <button class="submitBtn" name="register">Register</button>
